// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio component should render correctly with bottom labelPosition 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: inherit;
  color: inherit;
  padding: 1.6rem 0;
}

.c6 {
  position: relative;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 0.15rem solid;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.c6::after {
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  width: 67%;
  height: 67%;
  -webkit-transform: translate(-50%,-50%) scale(0);
  -ms-transform: translate(-50%,-50%) scale(0);
  transform: translate(-50%,-50%) scale(0);
  border-radius: 100%;
  -webkit-transition: -webkit-transform 100ms ease-out;
  -webkit-transition: transform 100ms ease-out;
  transition: transform 100ms ease-out;
}

.c4 {
  position: absolute;
  opacity: 0;
  width: 1%;
  height: 1%;
  margin: 0;
}

.c4 ~ .c5 {
  border-color: #13181D;
}

.c4 ~ .c5::after {
  background-color: #13181D;
}

.c4:checked ~ .c5::after {
  -webkit-transform: translate(-50%,-50%) scale(1);
  -ms-transform: translate(-50%,-50%) scale(1);
  transform: translate(-50%,-50%) scale(1);
}

.c4:disabled ~ .c5 {
  border-color: #98A7B7;
}

.c4:disabled ~ .c5::after {
  background-color: #98A7B7;
}

.c4:not(:disabled):checked ~ .c5 {
  border-color: #3872D2;
}

.c4:not(:disabled):checked ~ .c5::after {
  background-color: #3872D2;
}

.c4:not(:disabled):focus ~ .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
}

.c3 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
  border-radius: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c0:hover .c5 {
  border-color: #3872D2;
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
}

.c0:active .c5 {
  border-color: #3061B3;
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.5);
}

<div>
  <label
    class="c0"
    for="Dummy"
    id="Dummy-wrapper"
    sizes="[object Object]"
  >
    <span
      class="c1 c2"
      id="Dummy-label"
      type="radio"
    >
      Dummy
    </span>
    <div
      class="c3"
    >
      <input
        class="c4"
        id="Dummy"
        sizes="[object Object]"
        type="radio"
        value="female"
      />
      <div
        class="c5 c6"
      />
    </div>
  </label>
</div>
`;

exports[`Radio component should render correctly with checked false and checked state 1`] = `
.c4 {
  position: relative;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 0.15rem solid;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.c4::after {
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  width: 67%;
  height: 67%;
  -webkit-transform: translate(-50%,-50%) scale(0);
  -ms-transform: translate(-50%,-50%) scale(0);
  transform: translate(-50%,-50%) scale(0);
  border-radius: 100%;
  -webkit-transition: -webkit-transform 100ms ease-out;
  -webkit-transition: transform 100ms ease-out;
  transition: transform 100ms ease-out;
}

.c2 {
  position: absolute;
  opacity: 0;
  width: 1%;
  height: 1%;
  margin: 0;
}

.c2 ~ .c3 {
  border-color: #13181D;
}

.c2 ~ .c3::after {
  background-color: #13181D;
}

.c2:checked ~ .c3::after {
  -webkit-transform: translate(-50%,-50%) scale(1);
  -ms-transform: translate(-50%,-50%) scale(1);
  transform: translate(-50%,-50%) scale(1);
}

.c2:disabled ~ .c3 {
  border-color: #98A7B7;
}

.c2:disabled ~ .c3::after {
  background-color: #98A7B7;
}

.c2:not(:disabled):checked ~ .c3 {
  border-color: #3872D2;
}

.c2:not(:disabled):checked ~ .c3::after {
  background-color: #3872D2;
}

.c2:not(:disabled):focus ~ .c3 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
}

.c1 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
  border-radius: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c0:hover .c3 {
  border-color: #3872D2;
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
}

.c0:active .c3 {
  border-color: #3061B3;
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.5);
}

<div>
  <label
    class="c0"
    for=""
    id="-wrapper"
    sizes="[object Object]"
  >
    
    <div
      class="c1"
    >
      <input
        class="c2"
        id=""
        sizes="[object Object]"
        type="radio"
        value="female"
      />
      <div
        class="c3 c4"
      />
    </div>
  </label>
</div>
`;

exports[`Radio component should render correctly with checked false and disabled state 1`] = `
.c4 {
  position: relative;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 0.15rem solid;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.c4::after {
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  width: 67%;
  height: 67%;
  -webkit-transform: translate(-50%,-50%) scale(0);
  -ms-transform: translate(-50%,-50%) scale(0);
  transform: translate(-50%,-50%) scale(0);
  border-radius: 100%;
  -webkit-transition: -webkit-transform 100ms ease-out;
  -webkit-transition: transform 100ms ease-out;
  transition: transform 100ms ease-out;
}

.c2 {
  position: absolute;
  opacity: 0;
  width: 1%;
  height: 1%;
  margin: 0;
}

.c2 ~ .c3 {
  border-color: #13181D;
}

.c2 ~ .c3::after {
  background-color: #13181D;
}

.c2:checked ~ .c3::after {
  -webkit-transform: translate(-50%,-50%) scale(1);
  -ms-transform: translate(-50%,-50%) scale(1);
  transform: translate(-50%,-50%) scale(1);
}

.c2:disabled ~ .c3 {
  border-color: #98A7B7;
}

.c2:disabled ~ .c3::after {
  background-color: #98A7B7;
}

.c2:not(:disabled):checked ~ .c3 {
  border-color: #3872D2;
}

.c2:not(:disabled):checked ~ .c3::after {
  background-color: #3872D2;
}

.c2:not(:disabled):focus ~ .c3 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
}

.c1 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
  border-radius: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: not-allowed;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

<div>
  <label
    class="c0"
    disabled=""
    for=""
    id="-wrapper"
    sizes="[object Object]"
  >
    
    <div
      class="c1"
    >
      <input
        class="c2"
        disabled=""
        id=""
        sizes="[object Object]"
        type="radio"
        value="female"
      />
      <div
        class="c3 c4"
      />
    </div>
  </label>
</div>
`;

exports[`Radio component should render correctly with checked false and hasError state 1`] = `
.c4 {
  position: relative;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 0.15rem solid;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.c4::after {
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  width: 67%;
  height: 67%;
  -webkit-transform: translate(-50%,-50%) scale(0);
  -ms-transform: translate(-50%,-50%) scale(0);
  transform: translate(-50%,-50%) scale(0);
  border-radius: 100%;
  -webkit-transition: -webkit-transform 100ms ease-out;
  -webkit-transition: transform 100ms ease-out;
  transition: transform 100ms ease-out;
}

.c2 {
  position: absolute;
  opacity: 0;
  width: 1%;
  height: 1%;
  margin: 0;
}

.c2 ~ .c3 {
  border-color: #D73A43;
}

.c2 ~ .c3::after {
  background-color: #D73A43;
}

.c2:checked ~ .c3::after {
  -webkit-transform: translate(-50%,-50%) scale(1);
  -ms-transform: translate(-50%,-50%) scale(1);
  transform: translate(-50%,-50%) scale(1);
}

.c2:disabled ~ .c3 {
  border-color: #98A7B7;
}

.c2:disabled ~ .c3::after {
  background-color: #98A7B7;
}

.c2:not(:disabled):checked ~ .c3 {
  border-color: #D73A43;
}

.c2:not(:disabled):checked ~ .c3::after {
  background-color: #D73A43;
}

.c2:not(:disabled):focus ~ .c3 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.35);
}

.c1 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
  border-radius: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c0:hover .c3 {
  border-color: #D73A43;
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.35);
}

.c0:active .c3 {
  border-color: #B73139;
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.5);
}

<div>
  <label
    class="c0"
    for=""
    id="-wrapper"
    sizes="[object Object]"
  >
    
    <div
      class="c1"
    >
      <input
        class="c2"
        id=""
        sizes="[object Object]"
        type="radio"
        value="female"
      />
      <div
        class="c3 c4"
      />
    </div>
  </label>
</div>
`;

exports[`Radio component should render correctly with checked true and checked state 1`] = `
.c4 {
  position: relative;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 0.15rem solid;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.c4::after {
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  width: 67%;
  height: 67%;
  -webkit-transform: translate(-50%,-50%) scale(0);
  -ms-transform: translate(-50%,-50%) scale(0);
  transform: translate(-50%,-50%) scale(0);
  border-radius: 100%;
  -webkit-transition: -webkit-transform 100ms ease-out;
  -webkit-transition: transform 100ms ease-out;
  transition: transform 100ms ease-out;
}

.c2 {
  position: absolute;
  opacity: 0;
  width: 1%;
  height: 1%;
  margin: 0;
}

.c2 ~ .c3 {
  border-color: #13181D;
}

.c2 ~ .c3::after {
  background-color: #13181D;
}

.c2:checked ~ .c3::after {
  -webkit-transform: translate(-50%,-50%) scale(1);
  -ms-transform: translate(-50%,-50%) scale(1);
  transform: translate(-50%,-50%) scale(1);
}

.c2:disabled ~ .c3 {
  border-color: #98A7B7;
}

.c2:disabled ~ .c3::after {
  background-color: #98A7B7;
}

.c2:not(:disabled):checked ~ .c3 {
  border-color: #3872D2;
}

.c2:not(:disabled):checked ~ .c3::after {
  background-color: #3872D2;
}

.c2:not(:disabled):focus ~ .c3 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
}

.c1 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
  border-radius: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

<div>
  <label
    class="c0"
    for=""
    id="-wrapper"
    sizes="[object Object]"
  >
    
    <div
      class="c1"
    >
      <input
        checked=""
        class="c2"
        id=""
        sizes="[object Object]"
        type="radio"
        value="female"
      />
      <div
        class="c3 c4"
      />
    </div>
  </label>
</div>
`;

exports[`Radio component should render correctly with checked true and disabled state 1`] = `
.c4 {
  position: relative;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 0.15rem solid;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.c4::after {
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  width: 67%;
  height: 67%;
  -webkit-transform: translate(-50%,-50%) scale(0);
  -ms-transform: translate(-50%,-50%) scale(0);
  transform: translate(-50%,-50%) scale(0);
  border-radius: 100%;
  -webkit-transition: -webkit-transform 100ms ease-out;
  -webkit-transition: transform 100ms ease-out;
  transition: transform 100ms ease-out;
}

.c2 {
  position: absolute;
  opacity: 0;
  width: 1%;
  height: 1%;
  margin: 0;
}

.c2 ~ .c3 {
  border-color: #13181D;
}

.c2 ~ .c3::after {
  background-color: #13181D;
}

.c2:checked ~ .c3::after {
  -webkit-transform: translate(-50%,-50%) scale(1);
  -ms-transform: translate(-50%,-50%) scale(1);
  transform: translate(-50%,-50%) scale(1);
}

.c2:disabled ~ .c3 {
  border-color: #98A7B7;
}

.c2:disabled ~ .c3::after {
  background-color: #98A7B7;
}

.c2:not(:disabled):checked ~ .c3 {
  border-color: #3872D2;
}

.c2:not(:disabled):checked ~ .c3::after {
  background-color: #3872D2;
}

.c2:not(:disabled):focus ~ .c3 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
}

.c1 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
  border-radius: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: not-allowed;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

<div>
  <label
    class="c0"
    disabled=""
    for=""
    id="-wrapper"
    sizes="[object Object]"
  >
    
    <div
      class="c1"
    >
      <input
        checked=""
        class="c2"
        disabled=""
        id=""
        sizes="[object Object]"
        type="radio"
        value="female"
      />
      <div
        class="c3 c4"
      />
    </div>
  </label>
</div>
`;

exports[`Radio component should render correctly with checked true and hasError state 1`] = `
.c4 {
  position: relative;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 0.15rem solid;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.c4::after {
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  width: 67%;
  height: 67%;
  -webkit-transform: translate(-50%,-50%) scale(0);
  -ms-transform: translate(-50%,-50%) scale(0);
  transform: translate(-50%,-50%) scale(0);
  border-radius: 100%;
  -webkit-transition: -webkit-transform 100ms ease-out;
  -webkit-transition: transform 100ms ease-out;
  transition: transform 100ms ease-out;
}

.c2 {
  position: absolute;
  opacity: 0;
  width: 1%;
  height: 1%;
  margin: 0;
}

.c2 ~ .c3 {
  border-color: #D73A43;
}

.c2 ~ .c3::after {
  background-color: #D73A43;
}

.c2:checked ~ .c3::after {
  -webkit-transform: translate(-50%,-50%) scale(1);
  -ms-transform: translate(-50%,-50%) scale(1);
  transform: translate(-50%,-50%) scale(1);
}

.c2:disabled ~ .c3 {
  border-color: #98A7B7;
}

.c2:disabled ~ .c3::after {
  background-color: #98A7B7;
}

.c2:not(:disabled):checked ~ .c3 {
  border-color: #D73A43;
}

.c2:not(:disabled):checked ~ .c3::after {
  background-color: #D73A43;
}

.c2:not(:disabled):focus ~ .c3 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.35);
}

.c1 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
  border-radius: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

<div>
  <label
    class="c0"
    for=""
    id="-wrapper"
    sizes="[object Object]"
  >
    
    <div
      class="c1"
    >
      <input
        checked=""
        class="c2"
        id=""
        sizes="[object Object]"
        type="radio"
        value="female"
      />
      <div
        class="c3 c4"
      />
    </div>
  </label>
</div>
`;

exports[`Radio component should render correctly with left labelPosition 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: inherit;
  color: inherit;
  padding: 0 1.6rem;
}

.c6 {
  position: relative;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 0.15rem solid;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.c6::after {
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  width: 67%;
  height: 67%;
  -webkit-transform: translate(-50%,-50%) scale(0);
  -ms-transform: translate(-50%,-50%) scale(0);
  transform: translate(-50%,-50%) scale(0);
  border-radius: 100%;
  -webkit-transition: -webkit-transform 100ms ease-out;
  -webkit-transition: transform 100ms ease-out;
  transition: transform 100ms ease-out;
}

.c4 {
  position: absolute;
  opacity: 0;
  width: 1%;
  height: 1%;
  margin: 0;
}

.c4 ~ .c5 {
  border-color: #13181D;
}

.c4 ~ .c5::after {
  background-color: #13181D;
}

.c4:checked ~ .c5::after {
  -webkit-transform: translate(-50%,-50%) scale(1);
  -ms-transform: translate(-50%,-50%) scale(1);
  transform: translate(-50%,-50%) scale(1);
}

.c4:disabled ~ .c5 {
  border-color: #98A7B7;
}

.c4:disabled ~ .c5::after {
  background-color: #98A7B7;
}

.c4:not(:disabled):checked ~ .c5 {
  border-color: #3872D2;
}

.c4:not(:disabled):checked ~ .c5::after {
  background-color: #3872D2;
}

.c4:not(:disabled):focus ~ .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
}

.c3 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
  border-radius: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0:hover .c5 {
  border-color: #3872D2;
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
}

.c0:active .c5 {
  border-color: #3061B3;
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.5);
}

<div>
  <label
    class="c0"
    for="Dummy"
    id="Dummy-wrapper"
    sizes="[object Object]"
  >
    <span
      class="c1 c2"
      id="Dummy-label"
      type="radio"
    >
      Dummy
    </span>
    <div
      class="c3"
    >
      <input
        class="c4"
        id="Dummy"
        sizes="[object Object]"
        type="radio"
        value="female"
      />
      <div
        class="c5 c6"
      />
    </div>
  </label>
</div>
`;

exports[`Radio component should render correctly with right labelPosition 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: inherit;
  color: inherit;
  padding: 0 1.6rem;
}

.c6 {
  position: relative;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 0.15rem solid;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.c6::after {
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  width: 67%;
  height: 67%;
  -webkit-transform: translate(-50%,-50%) scale(0);
  -ms-transform: translate(-50%,-50%) scale(0);
  transform: translate(-50%,-50%) scale(0);
  border-radius: 100%;
  -webkit-transition: -webkit-transform 100ms ease-out;
  -webkit-transition: transform 100ms ease-out;
  transition: transform 100ms ease-out;
}

.c4 {
  position: absolute;
  opacity: 0;
  width: 1%;
  height: 1%;
  margin: 0;
}

.c4 ~ .c5 {
  border-color: #13181D;
}

.c4 ~ .c5::after {
  background-color: #13181D;
}

.c4:checked ~ .c5::after {
  -webkit-transform: translate(-50%,-50%) scale(1);
  -ms-transform: translate(-50%,-50%) scale(1);
  transform: translate(-50%,-50%) scale(1);
}

.c4:disabled ~ .c5 {
  border-color: #98A7B7;
}

.c4:disabled ~ .c5::after {
  background-color: #98A7B7;
}

.c4:not(:disabled):checked ~ .c5 {
  border-color: #3872D2;
}

.c4:not(:disabled):checked ~ .c5::after {
  background-color: #3872D2;
}

.c4:not(:disabled):focus ~ .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
}

.c3 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
  border-radius: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c0:hover .c5 {
  border-color: #3872D2;
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
}

.c0:active .c5 {
  border-color: #3061B3;
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.5);
}

<div>
  <label
    class="c0"
    for="Dummy"
    id="Dummy-wrapper"
    sizes="[object Object]"
  >
    <span
      class="c1 c2"
      id="Dummy-label"
      type="radio"
    >
      Dummy
    </span>
    <div
      class="c3"
    >
      <input
        class="c4"
        id="Dummy"
        sizes="[object Object]"
        type="radio"
        value="female"
      />
      <div
        class="c5 c6"
      />
    </div>
  </label>
</div>
`;

exports[`Radio component should render correctly with top labelPosition 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: inherit;
  color: inherit;
  padding: 1.6rem 0;
}

.c6 {
  position: relative;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 0.15rem solid;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.c6::after {
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  width: 67%;
  height: 67%;
  -webkit-transform: translate(-50%,-50%) scale(0);
  -ms-transform: translate(-50%,-50%) scale(0);
  transform: translate(-50%,-50%) scale(0);
  border-radius: 100%;
  -webkit-transition: -webkit-transform 100ms ease-out;
  -webkit-transition: transform 100ms ease-out;
  transition: transform 100ms ease-out;
}

.c4 {
  position: absolute;
  opacity: 0;
  width: 1%;
  height: 1%;
  margin: 0;
}

.c4 ~ .c5 {
  border-color: #13181D;
}

.c4 ~ .c5::after {
  background-color: #13181D;
}

.c4:checked ~ .c5::after {
  -webkit-transform: translate(-50%,-50%) scale(1);
  -ms-transform: translate(-50%,-50%) scale(1);
  transform: translate(-50%,-50%) scale(1);
}

.c4:disabled ~ .c5 {
  border-color: #98A7B7;
}

.c4:disabled ~ .c5::after {
  background-color: #98A7B7;
}

.c4:not(:disabled):checked ~ .c5 {
  border-color: #3872D2;
}

.c4:not(:disabled):checked ~ .c5::after {
  background-color: #3872D2;
}

.c4:not(:disabled):focus ~ .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
}

.c3 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
  border-radius: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0:hover .c5 {
  border-color: #3872D2;
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
}

.c0:active .c5 {
  border-color: #3061B3;
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.5);
}

<div>
  <label
    class="c0"
    for="Dummy"
    id="Dummy-wrapper"
    sizes="[object Object]"
  >
    <span
      class="c1 c2"
      id="Dummy-label"
      type="radio"
    >
      Dummy
    </span>
    <div
      class="c3"
    >
      <input
        class="c4"
        id="Dummy"
        sizes="[object Object]"
        type="radio"
        value="female"
      />
      <div
        class="c5 c6"
      />
    </div>
  </label>
</div>
`;
